# rl-street-fighter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  makefile  pyproject.toml  setup.py
config/: config.yaml
docker/: Dockerfile
notebooks/: airstriker-genesis-test.ipynb  basic_agent_setup.ipynb  street-fighter.ipynb
src/rl_street_fighter/: config_loader.py  inputs.py  main.py  play.py  preprocess.py  reward.py  utils.py
src/rl_street_fighter/agents/: dqn_agent.py  dqn_recurrent_agent.py  memory_buffer.py  recurrent.py
src/street_fighter_ai/: __init__.py  config_loader.py  main.py  play.py  preprocess.py  utils.py
src/street_fighter_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/street_fighter_ai/agents/: base.py  dqn_agent.py  dqn_recurrent_agent.py  memory_buffer.py  recurrent.py
tests/: test_placeholder.py
