[tool.poetry]
name = "street-fighter-ai"
version = "0.1.0"
description = "Setup for training agents to play SF2 Turbo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
